--- a/webui/package.json
+++ b/webui/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "gulp-live-server": "0.0.29",
     "gulp-nodemon": "^2.0.6",
+    "mongoose": "^4.3.6",
     "nodemon": "^1.8.1"
   }
 }
