--- a/webui/package.json
+++ b/webui/package.json
@@ -7,16 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "browser-sync": "^2.11.1",
     "cookie-parser": "~1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "browser-sync": "^2.11.1",
     "gulp": "^3.9.0",
     "gulp-htmlmin": "^1.3.0",
-    "gulp-sass": "^2.1.1"
+    "gulp-sass": "^2.1.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "gulp-live-server": "0.0.29",
