--- a/webui/package.json
+++ b/webui/package.json
@@ -12,6 +12,7 @@
     "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "gulp": "^3.9.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-sass": "^2.1.1",
@@ -20,6 +21,7 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "cookie-session": "^1.2.0",
     "gulp-live-server": "0.0.29",
     "gulp-nodemon": "^2.0.6",
     "mongoose": "^4.3.6",
