--- a/webui/package.json
+++ b/webui/package.json
@@ -9,16 +9,20 @@
     "body-parser": "~1.13.2",
     "browser-sync": "^2.11.1",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^1.2.0",
+    "cookies": "^0.5.1",
     "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "express-sessions": "^1.0.5",
     "gulp": "^3.9.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-sass": "^2.1.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "session-file-store": "0.0.24"
   },
   "devDependencies": {
     "cookie-session": "^1.2.0",
