--- a/webui/package.json
+++ b/webui/package.json
@@ -21,6 +21,7 @@
     "gulp-sass": "^2.1.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "node-rest-client": "^1.8.0",
     "serve-favicon": "~2.3.0",
     "session-file-store": "0.0.24"
   },
